dvdbackup (0.4-1) UNRELEASED; urgency=low

  * New upstream version
  * debian/control:
    - Update Debian Standards-Version to 3.8.0
    - Add Homepage and Vcs-{Browser,Svn} fields
    - Add myself to Uploaders
  * Add newline to the end of debian/watch

 -- Benjamin Drung <benjamin.drung@gmail.com>  Mon, 02 Mar 2009 22:43:01 +0100

dvdbackup (0.2-2) unstable; urgency=low

  * Pass CFLAGS to build system, don't override them

 -- Stephen Gran <sgran@debian.org>  Tue, 01 Apr 2008 23:19:25 +0100

dvdbackup (0.2-1) unstable; urgency=low

  * New upstream version
  * Mandatory switches are now gone (closes: #469337, #470049)
  * Update debian/copyright to reflect new upstream
  * Update debian/rules to reflect new build system

 -- Stephen Gran <sgran@debian.org>  Tue, 11 Mar 2008 02:09:51 +0000

dvdbackup (0.1.1-12) unstable; urgency=low

  * Output an error message when DVDOpen fails (closes: #464520)

 -- Stephen Gran <sgran@debian.org>  Mon, 03 Mar 2008 02:26:03 +0000

dvdbackup (0.1.1-11) unstable; urgency=low

  * dvdbackup-dbg Depends on dvdbackup (closes: #463179)
  * s/mkisofs/genisoimage/g (closes: #415770)
  * Handle short reads from DVDReadBlocks (closes: #419670)
  * Handle broken ifo/bup files (closes: #467075)
  * Modify Build-Depends to not use the -1 revision
  * Update Standards Version (no changes)

 -- Stephen Gran <sgran@debian.org>  Sun, 02 Mar 2008 17:44:38 +0000

dvdbackup (0.1.1-10) unstable; urgency=low

  * Fix AUTHOR attribution in manpage (closes: #376987)
  * Apply broken block handling patch from Martin Stolle
    <mstoll@sus.mcgill.ca> (closes: #376065)

 -- Stephen Gran <sgran@debian.org>  Sun, 17 Sep 2006 14:05:00 +0100

dvdbackup (0.1.1-9) unstable; urgency=low

  * Change Priority: for -dbg package to match override field.

 -- Stephen Gran <sgran@debian.org>  Thu, 13 Jul 2006 16:13:11 +0100

dvdbackup (0.1.1-8) unstable; urgency=low

  * Don't save the output of `pwd` in a variable - at least some of the