@@ -3,7 +3,7 @@ Section: utils
 Priority: optional
 Maintainer: Stephen Gran <sgran@debian.org>
 Uploaders: Benjamin Drung <benjamin.drung@gmail.com>
-Build-Depends: debhelper (>= 5.0), libdvdread-dev (>=0.9.6)
+Build-Depends: cdbs, debhelper (>= 5.0), libdvdread-dev (>=0.9.6)
 Standards-Version: 3.8.0
 Homepage: http://dvdbackup.sourceforge.net
 Vcs-Svn: svn://svn.debian.org/svn/pkg-dvdbackup/trunk/
@@ -11,7 +11,7 @@ Vcs-Browser: http://svn.debian.org/viewsvn/pkg-dvdbackup/trunk/
 
 Package: dvdbackup
 Architecture: any
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Suggests: libdvdcss2
 Description: tool to rip DVD's from the command line
  dvdbackup will extract all (or optionally only selected) titles as found
@@ -22,6 +22,6 @@ Description: tool to rip DVD's from the command line
 Package: dvdbackup-dbg
 Architecture: any
 Priority: extra
-Depends: dvdbackup
+Depends: dvdbackup, ${misc:Depends}
 Description: debug files for dvdbackup
  This package contains the stripped debugging symbols from dvdbackup.
