@@ -1,3 +1,0 @@
-usr/bin
-usr/share/man/man1
-usr/share/doc/dvdbackup
