@@ -1,3 +1,0 @@
-debian/README.Debian
-debian/tmp/usr/share/doc/dvdbackup/NEWS
-debian/tmp/usr/share/doc/dvdbackup/README
