@@ -1,1 +1,1 @@
-usr/bin/dvdbackup
+debian/tmp/usr
