@@ -1,1 +1,0 @@
-debian/tmp/usr/share/man/man1/dvdbackup.1
