@@ -5,9 +5,14 @@ dvdbackup (0.4-1) UNRELEASED; urgency=low
     - Update Debian Standards-Version to 3.8.0
     - Add Homepage and Vcs-{Browser,Svn} fields
     - Add myself to Uploaders
+    - Add cdbs to Build-Depends
+    - Add ${misc:Depends} to Depends
   * Add newline to the end of debian/watch
+  * debian/rules: Switch to cdbs
+  * debian/dvdbackup.{dirs,docs,manpages}: Removed
+  * debian/dvdbackup.install: Updated for cdbs
 
- -- Benjamin Drung <benjamin.drung@gmail.com>  Mon, 02 Mar 2009 22:43:01 +0100
+ -- Benjamin Drung <benjamin.drung@gmail.com>  Mon, 02 Mar 2009 23:40:24 +0100
 
 dvdbackup (0.2-2) unstable; urgency=low
 
